# pyEpiAneufinder

./: .gitignore  README.md  RELEASE_NOTES_v0.3.7.md  pyproject.toml  render_fragments.py  setup.py
other_scripts/: preprocess.py  render_fragments.py  windows.py
pyEpiAneufinder/: __init__.py  assign_somy.py  distance_statistics.py  evaluate_cnv_results.py  get_breakpoints.py  hg19_windows.csv  karyotype_metrics.py  makeWindows.py  make_windows.py  plotting.py  postprocessing.py  pyEpiAneufinder.py  pyEpiAneufinder_v1.py  render_fragments.py
scverse_application/: README.md  pyEpiAneufinder-meta.yaml  pyEpiAneufinder-scverse-pr-checklist.md
tests/: test_karyo_gainloss.py  test_make_windows.py
